# flux-api

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  k6.js
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: Dockerfile  cd.yml  ci.yml  release.yml
config/: default.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20221013_075812_create_users.rs  m20221016_114137_create_messages.rs  m20221022_204621_create_streams.rs  m20221022_205123_create_messages_streams.rs  m20221023_090254_add_message_to_streams.rs  m20230409_073642_create_stream_tasks.rs  m20230409_073642_create_tasks.rs  m20230820_174857_create_auth_states.rs  m20231112_141751_create_user_push_subscriptions.rs  m20231209_150708_add_is_main_to_streams.rs  m20231210_170001_add_ya_gpt_id_to_stream_tasks.rs  m20240229_121744_create_streams_users.rs  m20240229_143819_create_uniq_index_to_messages_streams.rs  m20240302_161914_create_uniq_index_to_streams.rs  m20240303_142403_add_user_id_idx_to_pushes.rs  m20240330_083151_remove_uniq_user_idx_on_streams.rs  m20240511_131834_create_user_credentials.rs  m20240511_131839_create_user_challenges.rs
ml/: Cargo.toml
ml/src/: main.rs
src/: app.rs  main.rs  notifier.rs  observability.rs  settings.rs  tracing.rs
src/app/: auth.rs  db.rs  messages.rs  mod.rs  notifier.rs  state.rs  streams.rs  summarizer.rs  tasks.rs  users.rs
src/app/auth/: controller.rs  data.rs  entities.rs  middleware.rs  repo.rs  service.rs
src/app/auth/controller/: complete.rs  index.rs  join.rs  login.rs  me.rs
src/app/auth/data/: complete.rs  index.rs  join.rs  login.rs  me.rs  user.rs
src/app/auth/entities/: auth_state.rs
src/app/auth/service/: complete.rs  login.rs
src/app/messages/: controller.rs  data.rs  entities.rs  mod.rs  payload.rs  repo.rs  service.rs
src/app/messages/controller/: create.rs  index.rs  messages.rs  show.rs
src/app/messages/controllers/: create.rs  index.rs  mod.rs
src/app/messages/data/: create.rs  index.rs  messages.rs  mod.rs  show.rs
src/app/messages/entities/: message.rs  message_stream.rs  mod.rs
src/app/messages/service/: create.rs  index.rs  messages.rs  show.rs
src/app/messages/services/: create.rs  index.rs  mod.rs
src/app/notifier/: entities.rs  repo.rs
src/app/session/: data.rs  middleware.rs  mod.rs
src/app/session/controller/: auth.rs  mod.rs  show.rs
src/app/session/controllers/: auth.rs  mod.rs  show.rs
src/app/session/data/: auth.rs  mod.rs  show.rs
src/app/session/service/: auth.rs  mod.rs
src/app/session/services/: auth.rs  mod.rs
src/app/sessions/: data.rs  mod.rs  service.rs
src/app/sessions/entities/: mod.rs
src/app/streams/: controller.rs  data.rs  entities.rs  mod.rs  repo.rs  service.rs
src/app/streams/controller/: index.rs  show.rs
src/app/streams/controllers/: index.rs  mod.rs  show.rs
src/app/streams/data/: index.rs  show.rs
src/app/streams/entities/: mod.rs  stream.rs  stream_task.rs  stream_user.rs
src/app/streams/service/: index.rs  show.rs
src/app/streams/services/: index.rs  mod.rs  show.rs
src/app/summarizer/: ya_gpt.rs
src/app/tasks/: entities.rs  executor.rs  mod.rs  repo.rs  service.rs
src/app/tasks/entities/: mod.rs  task.rs
src/app/users/: entities.rs  mod.rs  push_subscriptions.rs  repo.rs
src/app/users/entities/: user.rs  user_credential.rs
src/app/users/push_subscriptions/: controller.rs  data.rs  entities.rs  repo.rs  service.rs
src/app/users/push_subscriptions/controller/: create.rs  vapid.rs
src/app/users/push_subscriptions/data/: create.rs  vapid.rs
src/app/users/push_subscriptions/entities/: push_subscription.rs
src/app/users/push_subscriptions/service/: create.rs
src/tracing/: mod.rs
