[package]
name = "flux-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "./migration" }

dotenv = "0.15.0"

axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-valid = "0.17.0"

jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.14", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "mock",
  "with-uuid",
  "with-time",
  "with-json",
] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
validator = { version = "0.17.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "v7"] }

chrono = "0.4.35"
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation",
] }
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde_json = "1.0.114"
itertools = "0.12.1"
reqwest = { version = "0.11.25", features = ["json"] }
tokio-stream = "0.1.14"
async-nats = "0.34.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"

opentelemetry = { version = "0.22.0", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.3.0"
opentelemetry_sdk = { version = "0.22.1", features = [
  "rt-tokio",
  "logs_level_enabled",
] }
opentelemetry-otlp = { version = "0.15.0", features = [
  "logs",
  "metrics",
  "trace",
] }

mry = "0.7.1"
config = "0.14.0"


# [build]
# rustflags = ["--cfg", "uuid_unstable"]

# [dev-dependencies]
# tower = { version = "0.4.13", features = ["util"] }
