[package]
name = "flux-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
# migration = { path = "./migration" }

axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-valid = "0.17.0"

sea-orm = { version = "0.12.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "mock",
  "with-uuid",
  "with-time",
  "with-json",
] }

tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

chrono = "0.4.35"
rand = { version = "0.8.5", features = ["min_const_gen"] }
validator = { version = "0.17.0", features = ["derive"] }
itertools = "0.12.1"
uuid = { version = "1.8.0", features = ["v4", "v7"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

reqwest = { version = "0.11.25", default-features = false, features = [
  "rustls-tls",
  "json",
] }

async-nats = "0.34.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.23.0"

opentelemetry = { version = "0.22.0", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.3.0"
opentelemetry_sdk = { version = "0.22.1", features = [
  "rt-tokio",
  "logs_level_enabled",
] }
opentelemetry-otlp = { version = "0.15.0", features = [
  "logs",
  "metrics",
  "trace",
] }

dotenv = "0.15.0"
config = "0.14.0"

jsonwebtoken = "9.2.0"
passkey = "0.2.0"

mry = "0.7.1"
